TEST_PROGRAMS/VALID/07/array_valid_2.go
// go lecture (6), slide 8
package main


func main () {
	var x[4][5] int
	x[1] = 3
}
