TEST_PROGRAMS/INVALID/07/slice_append.go
// In GoLite,
package main
var x []int

	x = append(x, 1)
	x = append(x, 2)
	x = append(x, 3)
func main() {
}
